Fix responsive button spacing in 'projects' section

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -7,7 +7,7 @@ $secondary-blue: #197278;
 $primary-red: #772e25;
 $secondary-red: #c44536;
 $primary-pink: #edddd4;
-$section-background:#3E4E4A;
+$section-background: #3e4e4a;
 
 #Home {
   nav {
@@ -79,7 +79,7 @@ $section-background:#3E4E4A;
 
   .container {
     position: relative;
-    background-color: $section-background;;
+    background-color: $section-background;
     z-index: 1;
   }
 
@@ -128,6 +128,9 @@ $section-background:#3E4E4A;
     }
     .card-body {
       border-top: 1px solid black;
+    }
+    .blog-buttons {
+      padding-top: 19px;
     }
     -webkit-box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.4);
     -moz-box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.4);
@@ -186,7 +189,16 @@ $section-background:#3E4E4A;
     box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.4);
   }
 
-  /*  LARGE BREAKPOINT */
+  /* LARGE BREAKPOINT */
+  @media (max-width: 1199.98px) {
+    #projects {
+      .blog-buttons {
+        padding: 0px;
+      }
+    }
+  }
+
+  /*  MEDIUM BREAKPOINT */
   @media screen and (max-width: 991.98px) {
     #projects {
       i {
@@ -198,6 +210,9 @@ $section-background:#3E4E4A;
       .card:nth-of-type(3) {
         display: flex;
         justify-content: center;
+      }
+      .blog-buttons {
+        padding-top: 19px;
       }
     }
   }
@@ -211,6 +226,9 @@ $section-background:#3E4E4A;
       .row:nth-of-type(3) {
         display: flex;
         justify-content: center;
+      }
+      .recipe-buttons {
+        padding-top: 19px;
       }
     }
     #contact {
@@ -255,6 +273,9 @@ $section-background:#3E4E4A;
       }
       .card {
         height: 466.52px;
+      }
+      .blog-buttons {
+        padding: 0px;
       }
     }
   }
